// ============================================
// PRISMA SCHEMA - SIAKAD STT DIAKONOS
// Database: MySQL (Converted from PostgreSQL)
// ============================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"  // ← CHANGED FROM postgresql
  url      = env("DATABASE_URL")
}

// ============================================
// ENUMS (MySQL Compatible - Using String)
// ============================================

enum Role {
  ADMIN
  DOSEN
  MAHASISWA
  KEUANGAN
}

enum JenisKelamin {
  L // Laki-laki
  P // Perempuan
}

enum StatusMahasiswa {
  AKTIF
  CUTI
  NON_AKTIF
  LULUS
  DO
}

enum StatusDosen {
  AKTIF
  NON_AKTIF
}

enum PeriodeSemester {
  GANJIL
  GENAP
}

enum StatusKRS {
  DRAFT
  SUBMITTED
  APPROVED
  REJECTED
}

enum NilaiHuruf {
  A
  AB
  B
  BC
  C
  CD
  D
  DE
  E
}

enum StatusPembayaran {
  PENDING
  APPROVED
  REJECTED
}

enum StatusPresensi {
  HADIR
  TIDAK_HADIR
  IZIN
  SAKIT
  ALPHA
}

enum JenisPembayaran {
  KRS
  TENGAH_SEMESTER
  PPL
  SKRIPSI
  WISUDA
  KOMITMEN_BULANAN
}

enum TipeFileKelas {
  RPS
  RPP
  MATERI
}

// ============================================
// 1. AUTHENTICATION & USER MANAGEMENT
// ============================================

model User {
  id        Int      @id @default(autoincrement())
  username  String?  @unique @db.VarChar(100)
  password  String   @db.VarChar(255)
  role      Role     @default(MAHASISWA)
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  mahasiswa Mahasiswa?
  dosen     Dosen?

  krsApproved        KRS[]        @relation("ApprovedBy")
  paketKRSCreated    PaketKRS[]   @relation("CreatedBy")
  nilaiInputted      Nilai[]      @relation("InputBy")
  pembayaranVerified Pembayaran[] @relation("VerifiedPayment")

  @@map("users")
}

// ============================================
// 2. MASTER DATA - PROGRAM STUDI
// ============================================

model ProgramStudi {
  id        Int      @id @default(autoincrement())
  kode      String   @unique @db.VarChar(20)
  nama      String   @db.VarChar(200)
  jenjang   String   @default("S1") @db.VarChar(10)
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  mahasiswa Mahasiswa[]
  dosen     Dosen[]
  paketKRS  PaketKRS[]

  @@map("program_studi")
}

// ============================================
// 3. MASTER DATA - MAHASISWA
// ============================================

model Mahasiswa {
  id                 Int             @id @default(autoincrement())
  userId             Int             @unique
  nim                String          @unique @db.VarChar(20)
  namaLengkap        String          @db.VarChar(200)
  tempatTanggalLahir String?         @db.VarChar(200)
  jenisKelamin       JenisKelamin?
  alamat             String?         @db.Text
  prodiId            Int
  angkatan           Int
  status             StatusMahasiswa @default(AKTIF)
  dosenWaliId        Int?
  createdAt          DateTime        @default(now())
  updatedAt          DateTime        @updatedAt

  // Relations
  user       User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  prodi      ProgramStudi       @relation(fields: [prodiId], references: [id])
  dosenWali  Dosen?             @relation("DosenWali", fields: [dosenWaliId], references: [id])
  presensi   PresensiDetail[]
  krs        KRS[]
  khs        KHS[]
  nilai      Nilai[]
  pembayaran Pembayaran[]

  @@index([nim])
  @@index([prodiId])
  @@index([angkatan])
  @@index([dosenWaliId])
  @@map("mahasiswa")
}

// ============================================
// 4. MASTER DATA - DOSEN
// ============================================

model Dosen {
  id               Int         @id @default(autoincrement())
  userId           Int         @unique
  nidn             String      @unique @db.VarChar(20)
  nuptk            String      @unique @db.VarChar(20)
  namaLengkap      String      @db.VarChar(200)
  prodiId          Int?
  tempatLahir      String?     @db.VarChar(100)
  tanggalLahir     DateTime?
  posisi           String      @db.VarChar(100)
  jafung           String      @db.VarChar(100)
  alumni           String      @db.VarChar(200)
  lamaMengajar     String      @db.VarChar(50)
  status           StatusDosen @default(AKTIF)
  createdAt        DateTime    @default(now())
  updatedAt        DateTime    @updatedAt

  user               User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  prodi              ProgramStudi?     @relation(fields: [prodiId], references: [id])
  mahasiswaBimbingan Mahasiswa[]       @relation("DosenWali")
  kelasMataKuliah    KelasMataKuliah[]
  kelasMKFiles       KelasMKFile[]

  @@index([nidn])
  @@index([prodiId])
  @@map("dosen")
}

// ============================================
// 5. MASTER DATA - MATA KULIAH
// ============================================

model MataKuliah {
  id            Int      @id @default(autoincrement())
  kodeMK        String   @unique @db.VarChar(20)
  namaMK        String   @db.VarChar(200)
  sks           Int
  semesterIdeal Int
  isLintasProdi Boolean  @default(false)
  deskripsi     String?  @db.Text
  isActive      Boolean  @default(true)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  kelasMataKuliah KelasMataKuliah[]

  @@index([kodeMK])
  @@index([semesterIdeal])
  @@map("mata_kuliah")
}

// ============================================
// 7. RUANGAN
// ============================================

model Ruangan {
  id        Int      @id @default(autoincrement())
  nama      String   @unique @db.VarChar(100)
  kapasitas Int?     @default(30)
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  kelasMataKuliah KelasMataKuliah[]

  @@map("ruangan")
}

// ============================================
// 8. SEMESTER AKADEMIK
// ============================================

model Semester {
  id                         Int             @id @default(autoincrement())
  tahunAkademik              String          @db.VarChar(20)
  periode                    PeriodeSemester
  tanggalMulai               DateTime
  tanggalSelesai             DateTime
  periodeKRSMulai            DateTime
  periodeKRSSelesai          DateTime
  periodePerbaikanKRSMulai   DateTime
  periodePerbaikanKRSSelesai DateTime
  isActive                   Boolean         @default(false)
  createdAt                  DateTime        @default(now())
  updatedAt                  DateTime        @updatedAt

  kelasMataKuliah KelasMataKuliah[]
  krs             KRS[]
  khs             KHS[]
  nilai           Nilai[]
  pembayaranKRS   Pembayaran[]
  paketKRS        PaketKRS[]

  @@unique([tahunAkademik, periode])
  @@index([isActive])
  @@map("semester")
}

// ============================================
// 9. KELAS MATA KULIAH
// ============================================

model KelasMataKuliah {
  id         Int      @id @default(autoincrement())
  mkId       Int
  semesterId Int
  dosenId    Int
  hari       String   @db.VarChar(20)
  jamMulai   String   @db.VarChar(10)
  jamSelesai String   @db.VarChar(10)
  ruanganId  Int
  kuotaMax   Int      @default(30)
  keterangan String?  @db.Text
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  mataKuliah MataKuliah @relation(fields: [mkId], references: [id], onDelete: Cascade)
  semester   Semester   @relation(fields: [semesterId], references: [id], onDelete: Cascade)
  dosen      Dosen      @relation(fields: [dosenId], references: [id])
  ruangan    Ruangan    @relation(fields: [ruanganId], references: [id])

  paketKRSDetail PaketKRSDetail[]
  krsDetail      KRSDetail[]
  nilai          Nilai[]
  presensi       Presensi[]
  kelasMKFiles   KelasMKFile[]

  @@index([semesterId])
  @@index([dosenId])
  @@index([hari, jamMulai])
  @@map("kelas_mata_kuliah")
}

// ============================================
// 10. PAKET KRS
// ============================================

model PaketKRS {
  id            Int      @id @default(autoincrement())
  namaPaket     String   @db.VarChar(200)
  angkatan      Int
  prodiId       Int
  semesterPaket Int
  semesterId    Int
  totalSKS      Int      @default(0)
  createdById   Int
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  semester  Semester         @relation(fields: [semesterId], references: [id])
  prodi     ProgramStudi     @relation(fields: [prodiId], references: [id])
  createdBy User             @relation("CreatedBy", fields: [createdById], references: [id])
  detail    PaketKRSDetail[]
  krs       KRS[]

  @@index([angkatan, prodiId, semesterPaket])
  @@map("paket_krs")
}

// ============================================
// 11. PAKET KRS DETAIL
// ============================================

model PaketKRSDetail {
  id         Int      @id @default(autoincrement())
  paketKRSId Int
  kelasMKId  Int
  createdAt  DateTime @default(now())

  paketKRS PaketKRS        @relation(fields: [paketKRSId], references: [id], onDelete: Cascade)
  kelasMK  KelasMataKuliah @relation(fields: [kelasMKId], references: [id], onDelete: Cascade)

  @@unique([paketKRSId, kelasMKId])
  @@map("paket_krs_detail")
}

// ============================================
// 12. KRS MAHASISWA
// ============================================

model KRS {
  id              Int        @id @default(autoincrement())
  mahasiswaId     Int
  semesterId      Int
  paketKRSId      Int?
  status          StatusKRS  @default(DRAFT)
  totalSKS        Int        @default(0)
  isModified      Boolean    @default(false)
  catatanAdmin    String?    @db.Text
  tanggalSubmit   DateTime?
  tanggalApproval DateTime?
  approvedById    Int?
  createdAt       DateTime   @default(now())
  updatedAt       DateTime   @updatedAt

  mahasiswa  Mahasiswa  @relation(fields: [mahasiswaId], references: [id], onDelete: Cascade)
  semester   Semester   @relation(fields: [semesterId], references: [id])
  paketKRS   PaketKRS?  @relation(fields: [paketKRSId], references: [id])
  approvedBy User?      @relation("ApprovedBy", fields: [approvedById], references: [id])
  detail     KRSDetail[]

  @@unique([mahasiswaId, semesterId])
  @@index([status])
  @@index([semesterId])
  @@map("krs")
}

// ============================================
// 13. KRS DETAIL
// ============================================

model KRSDetail {
  id        Int      @id @default(autoincrement())
  krsId     Int
  kelasMKId Int
  createdAt DateTime @default(now())

  krs     KRS             @relation(fields: [krsId], references: [id], onDelete: Cascade)
  kelasMK KelasMataKuliah @relation(fields: [kelasMKId], references: [id], onDelete: Cascade)

  @@unique([krsId, kelasMKId])
  @@map("krs_detail")
}

// ============================================
// 14. NILAI MAHASISWA
// ============================================

model Nilai {
  id           Int         @id @default(autoincrement())
  mahasiswaId  Int
  kelasMKId    Int
  semesterId   Int
  nilaiAngka   Decimal?    @db.Decimal(5, 2)
  nilaiHuruf   NilaiHuruf?
  bobot        Decimal?    @db.Decimal(3, 2)
  isFinalized  Boolean     @default(false)
  inputById    Int
  tanggalInput DateTime    @default(now())
  updatedAt    DateTime    @updatedAt

  mahasiswa Mahasiswa       @relation(fields: [mahasiswaId], references: [id], onDelete: Cascade)
  kelasMK   KelasMataKuliah @relation(fields: [kelasMKId], references: [id], onDelete: Cascade)
  semester  Semester        @relation(fields: [semesterId], references: [id])
  inputBy   User            @relation("InputBy", fields: [inputById], references: [id])

  @@unique([mahasiswaId, kelasMKId, semesterId])
  @@index([semesterId])
  @@index([kelasMKId])
  @@map("nilai")
}

// ============================================
// 15. KHS
// ============================================

model KHS {
  id                Int      @id @default(autoincrement())
  mahasiswaId       Int
  semesterId        Int
  ips               Decimal  @db.Decimal(4, 2)
  ipk               Decimal  @db.Decimal(4, 2)
  totalSKSSemester  Int
  totalSKSKumulatif Int
  tanggalGenerate   DateTime @default(now())
  updatedAt         DateTime @updatedAt

  mahasiswa Mahasiswa @relation(fields: [mahasiswaId], references: [id], onDelete: Cascade)
  semester  Semester  @relation(fields: [semesterId], references: [id])

  @@unique([mahasiswaId, semesterId])
  @@index([semesterId])
  @@map("khs")
}

// ============================================
// 16. PEMBAYARAN
// ============================================

model Pembayaran {
  id              Int              @id @default(autoincrement())
  mahasiswaId     Int
  semesterId      Int?
  jenisPembayaran JenisPembayaran  @default(KRS)
  nominal         Int
  buktiUrl        String           @db.VarChar(500)
  status          StatusPembayaran @default(PENDING)
  catatan         String?          @db.Text
  bulanPembayaran DateTime?
  uploadedAt      DateTime         @default(now())
  verifiedAt      DateTime?
  verifiedById    Int?
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt

  mahasiswa  Mahasiswa @relation(fields: [mahasiswaId], references: [id], onDelete: Cascade)
  semester   Semester? @relation(fields: [semesterId], references: [id])
  verifiedBy User?     @relation("VerifiedPayment", fields: [verifiedById], references: [id])

  @@index([mahasiswaId])
  @@index([semesterId])
  @@index([status])
  @@index([jenisPembayaran])
  @@map("pembayaran")
}

// ============================================
// 17. PRESENSI
// ============================================

model Presensi {
  id        Int      @id @default(autoincrement())
  kelasMKId Int
  tanggal   DateTime @default(now())
  pertemuan Int
  materi    String?  @db.VarChar(500)
  catatan   String?  @db.Text
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  kelasMK KelasMataKuliah  @relation(fields: [kelasMKId], references: [id], onDelete: Cascade)
  detail  PresensiDetail[]

  @@unique([kelasMKId, pertemuan])
  @@index([kelasMKId])
  @@index([tanggal])
  @@map("presensi")
}

model PresensiDetail {
  id          Int            @id @default(autoincrement())
  presensiId  Int
  mahasiswaId Int
  status      StatusPresensi @default(ALPHA)
  keterangan  String?        @db.VarChar(500)
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt

  presensi  Presensi  @relation(fields: [presensiId], references: [id], onDelete: Cascade)
  mahasiswa Mahasiswa @relation(fields: [mahasiswaId], references: [id], onDelete: Cascade)

  @@unique([presensiId, mahasiswaId])
  @@index([mahasiswaId])
  @@map("presensi_detail")
}

// ============================================
// 18. KELAS MK FILES
// ============================================

model KelasMKFile {
  id           Int           @id @default(autoincrement())
  kelasMKId    Int
  tipeFile     TipeFileKelas
  namaFile     String        @db.VarChar(255)
  fileUrl      String        @db.VarChar(500)
  mingguKe     Int?
  keterangan   String?       @db.Text
  uploadedById Int
  uploadedAt   DateTime      @default(now())
  updatedAt    DateTime      @updatedAt

  kelasMK    KelasMataKuliah @relation(fields: [kelasMKId], references: [id], onDelete: Cascade)
  uploadedBy Dosen           @relation(fields: [uploadedById], references: [id])

  @@index([kelasMKId])
  @@index([tipeFile])
  @@map("kelas_mk_file")
}

// ============================================
// 19. AUDIT LOG
// ============================================

model AuditLog {
  id        Int      @id @default(autoincrement())
  userId    Int?
  action    String   @db.VarChar(100)
  tableName String   @db.VarChar(100)
  recordId  Int?
  oldData   Json?
  newData   Json?
  ipAddress String?  @db.VarChar(50)
  userAgent String?  @db.VarChar(500)
  createdAt DateTime @default(now())

  @@index([userId])
  @@index([tableName, recordId])
  @@index([createdAt])
  @@map("audit_log")
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../dbml"
}
